zero-schema-macros/tests/ui/fail/18_collision_access_mut.rs
use zero_schema_macros::zero;

#[zero]
struct AccessMutCollision {
    access_mut: u8,
}

fn main() {}
